syntax = "proto3";

package Shop.Application.DTOs.OrderCoupon;

message OrderCoupon {
    int32 id = 1;
    int32 order_id = 2;
    string order_code = 3;
    int32 coupon_id = 4;
    string coupon_code = 5;
    string coupon_type = 6;
    int64 discount_price = 7;
}
